# Entry

./: .gitignore  CMakeLists.txt  Entry  README.md  bootstrap.sh  build.cpp  build.sh  entry.lua
entry/: cli-options.hpp  compiler.hpp  debugging.hpp  entry.hpp  entry_entry.hpp  filecache.hpp  filesystem_utils.hpp  format.hpp  logging.hpp  main.hpp  platform.hpp  stringutils.hpp  target.hpp
examples/1_helloworld/: build.cpp  build.sh  main.cpp
examples/2_multiplefiles/: build.cpp  build.sh
examples/2_multiplefiles/src/: main.cpp  math_utils.cpp
include/: compiler.hpp  entry.hpp  filecache.hpp  filesystem_utils.hpp  logging.hpp  lua_wrappers.hpp  platform.hpp  target.hpp
src/: entry.cpp  filecache.cpp  filesystem_utils.cpp  lua_wrappers.cpp  main.cpp  platform.cpp
